--- a/MiddleMan_Source/source/stylesheets/index.css.scss
+++ b/MiddleMan_Source/source/stylesheets/index.css.scss
@@ -7,6 +7,9 @@ $row_item_padding: 75px;
 $small_margin:10px;
 $color: rgb(181,153,92);
 
+h3{
+    padding:20px;
+}
 
 #james{
     height:$title_height;
