--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,4 +1,8 @@
-/* line 11, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
+/* line 10, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
+h3 {
+  padding: 20px; }
+
+/* line 14, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
 #james {
   height: 100%;
   width: 100%;
@@ -8,7 +12,7 @@
   position: relative;
   margin: 0;
   padding: 0; }
-  /* line 21, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
+  /* line 24, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
   #james #index_top {
     position: absolute;
     top: 50%;
@@ -19,46 +23,46 @@
     text-align: center;
     text-shadow: 0px 0px 10px #888888; }
 
-/* line 34, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
+/* line 37, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
 #about_me {
   background: #b5995c;
   text-align: center;
   margin: 0;
   padding: 75px 0px; }
-  /* line 40, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
+  /* line 43, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
   #about_me .container {
     margin: 10px auto; }
-    /* line 42, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
+    /* line 45, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
     #about_me .container .about_me_image {
       width: 170px;
       height: 170px; }
 
-/* line 49, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
+/* line 52, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
 #individual_project {
   text-align: center;
   margin: 0;
   padding: 0;
   padding: 75px 0px; }
-  /* line 55, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
+  /* line 58, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
   #individual_project .project {
     vertical-align: top; }
-    /* line 58, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
+    /* line 61, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
     #individual_project .project .project_image {
       width: 170px;
       height: 170px;
       margin: 30px; }
-    /* line 64, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
+    /* line 67, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
     #individual_project .project .link_image {
       width: 40px;
       height: 40px; }
 
-/* line 71, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
+/* line 74, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
 #companies {
   background: white;
   padding: 75px 0px;
   margin: 0;
   text-align: center; }
-  /* line 79, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
+  /* line 82, /home/james/Documents/jtronlabs_website/MiddleMan_Source/source/stylesheets/index.css.scss */
   #companies .company .company_image {
     max-width: 212.5px;
     max-height: 212.5px; }
